Correciones y página de estadísticas de la plantilla

--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -28,13 +28,13 @@
             <article>
                 <h3>Joan García, nuevo fichaje del Barcelona</h3>
                 <p>El pasado 05 de junio del año 2025, se confirmó el fichaje del jugador del Espanyol Joan García.</p>
-                <img src="/imagenes/fotoJoanGarcia.png" alt="">
+                <img src="imagenes/fotoJoanGarcia.png" alt="">
             </article>
 
             <article>
                 <h3>Joan García, nuevo fichaje del Barcelona</h3>
                 <p>El pasado 05 de junio del año 2025, se confirmó el fichaje del jugador del Espanyol Joan García.</p>
-                <img src="/imagenes/fotoJoanGarcia.png" alt="">
+                <img src="imagenes/fotoJoanGarcia.png" alt="">
             </article>
         </section>
     </main>
