--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -17,8 +17,8 @@
     <nav aria-labelledby="menu-principal-titulo">
         <h2 id="menu-principal-titulo" class="visually-hidden">Menú principal</h2>
         <ul>
-            <li><a href="/plantilla">Plantilla actual del FC Barcelona</a></li>
-            <li><a href="/logout">Cerrar Sesión</a></li>
+            <li><a href="plantillaFCBarcelona.html">Estadísticas de plantilla</a></li>
+            <li><a href="/index.html">Cerrar Sesión</a></li>
         </ul>
     </nav>
 
@@ -26,18 +26,44 @@
         <section aria-labelledby="noticias-titulo">
             <h2 id="noticias-titulo">Noticias destacadas</h2>
             <article>
-                <h3>Joan García, nuevo fichaje del Barcelona</h3>
-                <p>El pasado 05 de junio del año 2025, se confirmó el fichaje del jugador del Espanyol Joan García.</p>
-                <img src="/imagenes/fotoJoanGarcia.png" alt="">
+                <h3>Cristiano Ronaldo habla sobre la joya del fútbol Lamine Yamal</h3>
+                <p>Lamine Yamal continúa destacando en el fútbol mundial. Recientemente, Cristiano Ronaldo
+                    aconsejó que se le permita crecer sin presiones excesivas, destacando su talento y proyección.
+                </p>
+                <img src="imagenes/Ronaldo.png" alt="Cristiano Ronaldo en rueda de prensa contestando preguntas">
             </article>
 
             <article>
-                <h3>Joan García, nuevo fichaje del Barcelona</h3>
-                <p>El pasado 05 de junio del año 2025, se confirmó el fichaje del jugador del Espanyol Joan García.</p>
-                <img src="/imagenes/fotoJoanGarcia.png" alt="">
+                <h3> El FC Barcelona ganó La Liga 2024-2025 </h3>
+                <p>El FC Barcelona se proclamó campeón de La Liga en la temporada 2024-2025 bajo la dirección 
+                    de Hansi Flick, asegurando el título en la jornada 36 tras vencer al Real Betis. Con un juego 
+                    ofensivo equilibrado por una defensa sólida, el equipo finalizó con 89 puntos y el menor número de 
+                    goles encajados en el torneo. Figuras como Lewandowski, Ter Stegen y la joven promesa Lamine Yamal fueron 
+                    claves en una campaña marcada por la solidez y el talento emergente de la cantera blaugrana.
+                </p>
+                <img src="imagenes/barcaLiga.png" alt="Equipo de FC Barcelona levantando el trofeo de LaLiga">
+            </article>
+
+              <article>
+                <h3> El FC Barcelona eliminado en semifinales de la Champions League 2024-2025</h3>
+                <p>El FC Barcelona fue eliminado en las semifinales de la UEFA Champions League 2024-2025 
+                    tras una intensa serie contra el Inter de Milán. En el partido de ida, disputado en el 
+                    Estadio Olímpico de Montjuic, el encuentro terminó en empate 3-3. En la vuelta, celebrada 
+                    en el estadio San Siro, el Inter se impuso 4-3 en tiempo extra, con un gol decisivo de Davide Frattesi 
+                    en la prórroga, dejando el marcador global en 7-6 a favor del conjunto italiano.
+                </p>
+                <img src="imagenes/eliminadoChampions.png" alt="Hansi Flick consolando a Raphina tras eliminación">
             </article>
         </section>
     </main>
+
+    <footer>
+        <p>&copy; 2025 BarcaInfo. Todos los derechos reservados.</p>
+        <p>Contacto: barcaInfo@gmail.com</p>
+    </footer>
+
+    <script src="menuPrincipal.js"></script>
 </body>
+
 
 </html>
