--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <main class="login-layout">
 
-    <form action="/login" method="post" novalidate>
+    <form novalidate>
       <fieldset>
         <legend>Accede a tu cuenta</legend>
 
