--- a/plantillaFCBarcelona.html
+++ b/plantillaFCBarcelona.html
@@ -34,6 +34,12 @@
     </section>
   </main>
 
+
+  <footer>
+    <p>&copy; 2025 BarcaInfo. Todos los derechos reservados.</p>
+    <p>Contacto: barcaInfo@gmail.com</p>
+  </footer>
+  
   <script src="plantilla.js"></script>
 </body>
 
