Cambio en el nombre de las ímágenes para que funcione en TalkBack

--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -30,7 +30,7 @@
                 <p>Lamine Yamal continúa destacando en el fútbol mundial. Recientemente, Cristiano Ronaldo
                     aconsejó que se le permita crecer sin presiones excesivas, destacando su talento y proyección.
                 </p>
-                <img src="imagenes/Ronaldo.png" alt="Cristiano Ronaldo en rueda de prensa contestando preguntas">
+                <img src="imagenes/Cristiano Ronaldo en rueda de prensa contestando preguntas.png" alt="Cristiano Ronaldo en rueda de prensa contestando preguntas">
             </article>
 
             <article>
@@ -41,7 +41,7 @@
                     goles encajados en el torneo. Figuras como Lewandowski, Ter Stegen y la joven promesa Lamine Yamal fueron 
                     claves en una campaña marcada por la solidez y el talento emergente de la cantera blaugrana.
                 </p>
-                <img src="imagenes/barcaLiga.png" alt="Equipo de FC Barcelona levantando el trofeo de LaLiga">
+                <img src="imagenes/Equipo de FC Barcelona levantando el trofeo de LaLiga.png" alt="Equipo de FC Barcelona levantando el trofeo de LaLiga">
             </article>
 
               <article>
@@ -52,7 +52,18 @@
                     en el estadio San Siro, el Inter se impuso 4-3 en tiempo extra, con un gol decisivo de Davide Frattesi 
                     en la prórroga, dejando el marcador global en 7-6 a favor del conjunto italiano.
                 </p>
-                <img src="imagenes/eliminadoChampions.png" alt="Hansi Flick consolando a Raphina tras eliminación">
+                <img src="imagenes/Hansi Flick consolando a Raphina tras eliminación.png" alt="Hansi Flick consolando a Raphina tras eliminación">
+            </article>
+
+             <article>
+                <h3> "El Barça Femení conquista la Copa de la Reina y cierra la temporada con triplete"</h3>
+                <p>El FC Barcelona Femenino se impuso 2-0 al Atlético de Madrid en la final de la Copa de la Reina, 
+                    celebrada en Huesca, con un doblete de Claudia Pina. Con este título, el equipo cierra una temporada 
+                    perfecta a nivel nacional, sumando la Copa, la Liga F y la Supercopa. Además, fue un partido emotivo 
+                    por la despedida de la jugadora Ingrid Engen, quien se retiró entre lágrimas tras disputar sus últimos 
+                    minutos como blaugrana.
+                </p>
+                <img src="imagenes/FC Barca Femení levantando la Copa de la Reina.png" alt="FC Barca Femení levantando la Copa de la Reina.png">
             </article>
         </section>
     </main>
