--- a/plantillaFCBarcelona.html
+++ b/plantillaFCBarcelona.html
@@ -18,7 +18,7 @@
     <section aria-labelledby="jugadores-titulo">
       <h2 id="jugadores-titulo">Jugadores</h2>
       <table id="tabla-jugadores">
-        <caption>Estadísticas de jugadores de la plantilla del FC Barcelona para la temporada 2024/2025</caption>
+        <caption>Estadísticas de jugadores de la plantilla del FC Barcelona de la temporada 2024/2025</caption>
         <thead>
           <tr>
             <th scope="col">Nombre</th>
@@ -39,7 +39,7 @@
     <p>&copy; 2025 BarcaInfo. Todos los derechos reservados.</p>
     <p>Contacto: barcaInfo@gmail.com</p>
   </footer>
-  
+
   <script src="plantilla.js"></script>
 </body>
 
