Cambios en menú principal

--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Página Principal de Barca Info</h1>
-        <p><em>"Més que un club"</em></p>
+        <p>"Més que un club"</p>
     </header>
 
     <nav aria-labelledby="menu-principal-titulo">
