--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -18,6 +18,7 @@
         <h2 id="menu-principal-titulo" class="visually-hidden">Menú principal</h2>
         <ul>
             <li><a href="plantillaFCBarcelona.html">Estadísticas de plantilla</a></li>
+            <li><a href=""></a>Configuración</li>
             <li><a href="index.html">Cerrar Sesión</a></li>
         </ul>
     </nav>
@@ -30,40 +31,47 @@
                 <p>Lamine Yamal continúa destacando en el fútbol mundial. Recientemente, Cristiano Ronaldo
                     aconsejó que se le permita crecer sin presiones excesivas, destacando su talento y proyección.
                 </p>
-                <img src="imagenes/Cristiano Ronaldo en rueda de prensa contestando preguntas.png" alt="Cristiano Ronaldo en rueda de prensa contestando preguntas">
+                <img src="imagenes/Cristiano Ronaldo en rueda de prensa contestando preguntas.png"
+                    alt="Cristiano Ronaldo en rueda de prensa contestando preguntas">
             </article>
 
             <article>
                 <h3> El FC Barcelona ganó La Liga 2024-2025 </h3>
-                <p>El FC Barcelona se proclamó campeón de La Liga en la temporada 2024-2025 bajo la dirección 
-                    de Hansi Flick, asegurando el título en la jornada 36 tras vencer al Real Betis. Con un juego 
-                    ofensivo equilibrado por una defensa sólida, el equipo finalizó con 89 puntos y el menor número de 
-                    goles encajados en el torneo. Figuras como Lewandowski, Ter Stegen y la joven promesa Lamine Yamal fueron 
+                <p>El FC Barcelona se proclamó campeón de La Liga en la temporada 2024-2025 bajo la dirección
+                    de Hansi Flick, asegurando el título en la jornada 36 tras vencer al Real Betis. Con un juego
+                    ofensivo equilibrado por una defensa sólida, el equipo finalizó con 89 puntos y el menor número de
+                    goles encajados en el torneo. Figuras como Lewandowski, Ter Stegen y la joven promesa Lamine Yamal
+                    fueron
                     claves en una campaña marcada por la solidez y el talento emergente de la cantera blaugrana.
                 </p>
-                <img src="imagenes/Equipo de FC Barcelona levantando el trofeo de LaLiga.png" alt="Equipo de FC Barcelona levantando el trofeo de LaLiga">
+                <img src="imagenes/Equipo de FC Barcelona levantando el trofeo de LaLiga.png"
+                    alt="Equipo de FC Barcelona levantando el trofeo de LaLiga">
             </article>
 
-              <article>
+            <article>
                 <h3> El FC Barcelona eliminado en semifinales de la Champions League 2024-2025</h3>
-                <p>El FC Barcelona fue eliminado en las semifinales de la UEFA Champions League 2024-2025 
-                    tras una intensa serie contra el Inter de Milán. En el partido de ida, disputado en el 
-                    Estadio Olímpico de Montjuic, el encuentro terminó en empate 3-3. En la vuelta, celebrada 
-                    en el estadio San Siro, el Inter se impuso 4-3 en tiempo extra, con un gol decisivo de Davide Frattesi 
+                <p>El FC Barcelona fue eliminado en las semifinales de la UEFA Champions League 2024-2025
+                    tras una intensa serie contra el Inter de Milán. En el partido de ida, disputado en el
+                    Estadio Olímpico de Montjuic, el encuentro terminó en empate 3-3. En la vuelta, celebrada
+                    en el estadio San Siro, el Inter se impuso 4-3 en tiempo extra, con un gol decisivo de Davide
+                    Frattesi
                     en la prórroga, dejando el marcador global en 7-6 a favor del conjunto italiano.
                 </p>
-                <img src="imagenes/Hansi Flick consolando a Raphina tras eliminación.png" alt="Hansi Flick consolando a Raphina tras eliminación">
+                <img src="imagenes/Hansi Flick consolando a Raphina tras eliminación.png"
+                    alt="Hansi Flick consolando a Raphina tras eliminación">
             </article>
 
-             <article>
+            <article>
                 <h3> "El Barça Femení conquista la Copa de la Reina y cierra la temporada con triplete"</h3>
-                <p>El FC Barcelona Femenino se impuso 2-0 al Atlético de Madrid en la final de la Copa de la Reina, 
-                    celebrada en Huesca, con un doblete de Claudia Pina. Con este título, el equipo cierra una temporada 
-                    perfecta a nivel nacional, sumando la Copa, la Liga F y la Supercopa. Además, fue un partido emotivo 
-                    por la despedida de la jugadora Ingrid Engen, quien se retiró entre lágrimas tras disputar sus últimos 
+                <p>El FC Barcelona Femenino se impuso 2-0 al Atlético de Madrid en la final de la Copa de la Reina,
+                    celebrada en Huesca, con un doblete de Claudia Pina. Con este título, el equipo cierra una temporada
+                    perfecta a nivel nacional, sumando la Copa, la Liga F y la Supercopa. Además, fue un partido emotivo
+                    por la despedida de la jugadora Ingrid Engen, quien se retiró entre lágrimas tras disputar sus
+                    últimos
                     minutos como blaugrana.
                 </p>
-                <img src="imagenes/FC Barca Femení levantando la Copa de la Reina.png" alt="FC Barca Femení levantando la Copa de la Reina.png">
+                <img src="imagenes/FC Barca Femení levantando la Copa de la Reina.png"
+                    alt="FC Barca Femení levantando la Copa de la Reina.png">
             </article>
         </section>
     </main>
