Cambios en el nav de menú

--- a/plantillaFCBarcelona.html
+++ b/plantillaFCBarcelona.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <section aria-labelledby="jugadores-titulo">
+    <section aria-labelledby="jugadores">
       <h2 id="jugadores-titulo">Jugadores</h2>
       <table id="tabla-jugadores">
         <caption>Estadísticas de jugadores de la plantilla del FC Barcelona de la temporada 2024/2025</caption>
