--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -31,7 +31,7 @@
                 <p>Lamine Yamal continúa destacando en el fútbol mundial. Recientemente, Cristiano Ronaldo
                     aconsejó que se le permita crecer sin presiones excesivas, destacando su talento y proyección.
                 </p>
-                <img src="imagenes/Cristiano Ronaldo en rueda de prensa contestando preguntas.png"
+                <img src="imagenes/CristianoRonaldoenruedadeprensacontestandopreguntas.png"
                     alt="Cristiano Ronaldo en rueda de prensa contestando preguntas">
             </article>
 
@@ -44,7 +44,7 @@
                     fueron
                     claves en una campaña marcada por la solidez y el talento emergente de la cantera blaugrana.
                 </p>
-                <img src="imagenes/Equipo de FC Barcelona levantando el trofeo de LaLiga.png"
+                <img src="imagenes/EquipodeFCBarcelonalevantandoeltrofeodeLaLiga.png"
                     alt="Equipo de FC Barcelona levantando el trofeo de LaLiga">
             </article>
 
@@ -57,7 +57,7 @@
                     Frattesi
                     en la prórroga, dejando el marcador global en 7-6 a favor del conjunto italiano.
                 </p>
-                <img src="imagenes/Hansi Flick consolando a Raphina tras eliminación.png"
+                <img src="imagenes/HansiFlickconsolandoaRaphinatraseliminación.png"
                     alt="Hansi Flick consolando a Raphina tras eliminación">
             </article>
 
@@ -70,8 +70,8 @@
                     últimos
                     minutos como blaugrana.
                 </p>
-                <img src="imagenes/FC Barca Femení levantando la Copa de la Reina.png"
-                    alt="FC Barca Femení levantando la Copa de la Reina.png">
+                <img src="imagenes/FCBarcaFemenílevantandolaCopadelaReina.png"
+                    alt="FC Barca Femení levantando la Copa de la Reina.">
             </article>
         </section>
     </main>
