--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -57,7 +57,7 @@
                     Frattesi
                     en la prórroga, dejando el marcador global en 7-6 a favor del conjunto italiano.
                 </p>
-                <img src="imagenes/HansiFlickconsolandoaRaphinatraseliminación.png"
+                <img src="imagenes/HansiFlickconsolandoaRaphinatraseliminacion.png"
                     alt="Hansi Flick consolando a Raphina tras eliminación">
             </article>
 
@@ -70,7 +70,7 @@
                     últimos
                     minutos como blaugrana.
                 </p>
-                <img src="imagenes/FCBarcaFemenílevantandolaCopadelaReina.png"
+                <img src="imagenes/FCBarcaFemenilevantandolaCopadelaReina.png"
                     alt="FC Barca Femení levantando la Copa de la Reina.">
             </article>
         </section>
