--- a/menuPrincipal.html
+++ b/menuPrincipal.html
@@ -18,7 +18,7 @@
         <h2 id="menu-principal-titulo" class="visually-hidden">Menú principal</h2>
         <ul>
             <li><a href="plantillaFCBarcelona.html">Estadísticas de plantilla</a></li>
-            <li><a href="conf.html">Configuración</a></li>
+            <li><a href=>Configuración</a></li>
             <li><a href="index.html">Cerrar Sesión</a></li>
         </ul>
     </nav>
